--- a/App.config
+++ b/App.config
@@ -8,8 +8,7 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
   </startup>
   <connectionStrings>
-    <add name="Entities" connectionString="metadata=res://*/Baza.Model.csdl|res://*/Baza.Model.ssdl|res://*/Baza.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=3-DELL-AUD501\SQLEXPRESS;initial catalog=SSdeep;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+    <add name="Entities" connectionString="metadata=res://*/Baza.Model.csdl|res://*/Baza.Model.ssdl|res://*/Baza.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LENOVO-PC1\SQLEXPRESS;initial catalog=SSdeep;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
